@@ -2,6 +2,7 @@
 ** Added
 - Docstring support for defrel (@ethan-leba)
 - Add reazon-timeout option for limiting queries (@ethan-leba)
+- Add flag for whether or not to run the occurs-check
 
 * 0.3
 ** Added
